@@ -1,3 +1,8 @@
+2011-11-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/include/yarp/os/Network.h: add checkNetwork
+	variant with timeout [thanks Martin Peniak]
+
 2011-11-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_sig/include/yarp/sig/Image.h: correctly declare 
